# translator-web

./: .gitignore  .gitmodules  README.md  start.sh
api/: pyproject.toml
api/src/api/: config.py  main.py  schemas.py  translator.py
web/: package-lock.json  vite.config.ts
web/src/: App.tsx
web/src/api/: translate.ts
web/src/components/: language-label.tsx  translator-panel.tsx
web/src/hooks/: use-debounced-translation.ts
